test/rbkt/Queries/zorba/error/trace1.xq
declare function local:foo() as xs:anyAtomicType
{
  fn:trace(3, "foo")
};

local:foo()
